fix: disable touch callout on iOS webkit-based browsers

--- a/src/css/cropper.scss
+++ b/src/css/cropper.scss
@@ -7,6 +7,7 @@ $cropper-image-path: '../images' !default;
     line-height: 0;
     position: relative;
     touch-action: none;
+    -webkit-touch-callout: none;
     user-select: none;
 
     img {
